--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "market-backend",
   "version": "1.0.0",
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsx watch src/server.ts",
+    "dev": "tsx watch src/server.ts"
   },
   "repository": {
     "type": "git",
@@ -20,12 +24,19 @@
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^9.3.0",
     "@types/node": "^18.11.18",
+    "@typescript-eslint/parser": "^5.50.0",
+    "eslint": "^8.33.0",
+    "prettier": "^2.8.3",
     "prisma": "^4.9.0",
     "prisma-erd-generator": "^1.2.5",
-    "ts-node": "^10.9.1",
+    "tsx": "^3.12.2",
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@prisma/client": "^4.9.0"
+    "@fastify/cors": "^8.2.0",
+    "@prisma/client": "^4.9.0",
+    "dotenv": "^16.0.3",
+    "fastify": "^4.12.0",
+    "zod": "^3.20.2"
   }
 }
